k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraprice-backend
  labels:
    app: terraprice-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terraprice-backend
  template:
    metadata:
      labels:
        app: terraprice-backend
    spec:
      containers:
        - name: backend
          image: 486036153335.dkr.ecr.us-east-1.amazonaws.com/terraprice-backend:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: terraprice-backend-svc
spec:
  selector:
    app: terraprice-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
