k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terraprice-backend-svc
spec:
  selector:
    app: terraprice-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
