k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraprice-redis
  labels:
    app: terraprice-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terraprice-redis
  template:
    metadata:
      labels:
        app: terraprice-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          # resources:
          #   requests:
          #     cpu: "50m"
          #     memory: "64Mi"
          #   limits:
          #     cpu: "100m"
          #     memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: terraprice-redis-svc
spec:
  selector:
    app: terraprice-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
